--- a/stiles/Dog-styles.css
+++ b/stiles/Dog-styles.css
@@ -1,17 +1,55 @@
 body{
     display: flex;
     flex-direction: column;
-    justify-content: spase-around;
-    align-items: center;
+    justify-content: space-around;
+  
+  
 }
 .thumbnails-list{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    max-height:  width 25vh; 
+    max-height: 25vh; 
     overflow-y: auto;
+    justify-content: space-around;
+    list-style: none;
+   /* padding: 0;*/
+    padding: 2.5vh 000;
+    
 }
 .thumbnails-image {
     width: 20vw;
     height: 15vw;
+    display: block;
+}
+.details-title {
+    background-color: rgb(211, 179, 209);
+    position: absolute;
+    left: 3vw;
+    bottom: 2vw;
+}
+.details-image{
+    width: 60vw;
+    height: 49vw;
+}
+.details-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.thumbnails-title{
+    display: block;
+    text-align: center;
+    background-color:rgb(230, 211, 211);
+    color: rgb(151, 124, 132);
+    font-size: 1.1rem;
+}
+.thumbnails-item {
+margin-top: 2vh;
+margin-left: 2vw;
+border: 1px solid rgb(70, 70, 241);
+}
+.thumbnails-anchor {
+    text-decoration: none;
 }
