--- a/stiles/Dog-styles.css
+++ b/stiles/Dog-styles.css
@@ -1,55 +1,134 @@
-body{
+:root {
+    --thumbnails-image-width: 20vw;
+    --thumbnails-image-height: 18vw;
+    --thumbnail-title-height: calc(var(--thumbnails-image-height) * 0.33);
+}
+body {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-  
-  
+    justify-content: space-between;
+    margin: 0;
+    background-color: rgb(151, 132, 133);
+    /* align-items: center; */
 }
-.thumbnails-list{
+.thumbnails-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    max-height: 25vh; 
+    max-height: 35vh;
     overflow-y: auto;
     justify-content: space-around;
     list-style: none;
-   /* padding: 0;*/
-    padding: 2.5vh 000;
-    
+    padding: 0;
+    padding-top: 2.5vh;
 }
 .thumbnails-image {
-    width: 20vw;
-    height: 15vw;
-    display: block;
+    width: var(--thumbnails-image-width);
+    height: var(--thumbnails-image-height);
+    display:block;
 }
 .details-title {
-    background-color: rgb(211, 179, 209);
+    background-color: rgb(206, 154, 157);
     position: absolute;
     left: 3vw;
     bottom: 2vw;
 }
-.details-image{
-    width: 60vw;
-    height: 49vw;
+.details-image {
+    width: 70vw;
+    height: 60vw;
+    border-radius: 25%;
 }
-.details-container{
+.details-container {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.thumbnails-title{
+.thumbnails-title {
     display: block;
     text-align: center;
-    background-color:rgb(230, 211, 211);
-    color: rgb(151, 124, 132);
-    font-size: 1.1rem;
+    background-color: rgb(245, 161, 161);
+    color: rgb(24, 21, 21);
+    font-size: 1.2rem;
+    width: var(--thumbnails-image-width);
+    height: var(--thumbnail-title-height);
 }
 .thumbnails-item {
-margin-top: 2vh;
-margin-left: 2vw;
-border: 1px solid rgb(70, 70, 241);
+    margin-top: 2vh;
+    margin-left: 2vw;
+    border: 1px solid rgb(168, 142, 154);
+    max-width: var(--thumbnails-image-width);
+    min-height: calc(var(--thumbnails-image-height) + var(--thumbnail-title-height));
+    border-radius: 25%;
+    overflow: hidden;
 }
 .thumbnails-anchor {
     text-decoration: none;
+}
+.logo-title {
+    background-color: rgb(206, 166, 172);
+    color: rgb(51, 17, 31);
+    font-size: 3rem;
+    text-align: center;
+   text-transform: uppercase;
+   margin: 0;
+   font-family: 'Courier New', Courier, monospace;
+}
+body, html {
+    height: 100%;
+}
+@media (min-width: 568px){
+@font-face {
+    font-family: airstream;
+    src: url("fonts/Airstream-webfont.svg");
+    src: url("fonts/Airstream-webfont.woff");
+}
+    :root {
+        --thumbnails-image-width: 12vw;
+        --thumbnails-image-height: 10vw;
+        --thumbnail-title-height: calc(var(--thumbnails-image-height) * 0.25);
+    }
+    .thumbnails-list {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        order: -1;
+        max-height: 70vh;
+        justify-content: flex-start;
+        padding: 0; 
+        margin: 0;   
+    }
+    .thumbnails-title {
+        font-size: 1rem;
+    }
+    .thumbnails-item {
+        margin-left:0;
+        overflow:hidden;
+        margin-top: 0;
+    }
+    .thumbnails-item +.thumbnails-item {
+        margin-top: 2vh;
+    }
+    .details-image {
+        width: 68vw;
+        height: 45vw;
+    }
+    .details-title {
+        left: -4vw;
+        bottom: 2vw;        
+    }
+    .main-content {
+        display: flex;
+         justify-content: space-around;         
+    }
+    .details-container {
+        justify-content: center;     
+    }
+    body {
+        justify-content: space-between;
+        margin: 0;
+    }
+    .logo-title {
+        margin: 0;
+        font-size: 1.2rem;   
+    }
 }
